FormulaParser.js
// Generated from Formula.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var FormulaListener = require('./FormulaListener').FormulaListener;
var FormulaVisitor = require('./FormulaVisitor').FormulaVisitor;

var grammarFileName = "Formula.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'('", "')'", "','", "'~'", "'!'", "'*'", "'/'", 
                     "'%'", "'+'", "'-'", "'<<'", "'>>'", "'<'", "'<='", 
                     "'>'", "'>='", "'=='", "'!='", "'&'", "'^'", "'|'", 
                     "'&&'", "'||'" ];

var symbolicNames = [ null, null, null, null, "BITWISE_NOT", "LOGICAL_NOT", 
                      "MULTIPLY", "DIVIDE", "MODULO", "ADDITION", "SUBTRACTION", 
                      "SHIFT_LEFT", "SHIFT_RIGHT", "LT", "LTE", "GT", "GTE", 
                      "EQUALITY", "INEQUALITY", "BITWISE_AND", "BITWISE_XOR", 
                      "BITWISE_OR", "LOGICAL_AND", "LOGICAL_OR", "TRUE", 
                      "FALSE", "POINT", "ID", "NUMBER_CONST", "WS" ];

var ruleNames =  [ "formula", "expr", "infixExpr", "prefixExpr", "parenthesesExpr", 
                   "simpleExpr", "func", "argumentList", "constNumber", 
                   "pointCode", "not", "scaling", "addition", "bitwiseShift", 
                   "relational", "equality", "and", "exclusiveOr", "inclusiveOr", 
                   "conjunction", "disjunction" ];

function FormulaParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

FormulaParser.prototype = Object.create(antlr4.Parser.prototype);
FormulaParser.prototype.constructor = FormulaParser;

Object.defineProperty(FormulaParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

FormulaParser.EOF = antlr4.Token.EOF;
FormulaParser.T__0 = 1;
FormulaParser.T__1 = 2;
FormulaParser.T__2 = 3;
FormulaParser.BITWISE_NOT = 4;
FormulaParser.LOGICAL_NOT = 5;
FormulaParser.MULTIPLY = 6;
FormulaParser.DIVIDE = 7;
FormulaParser.MODULO = 8;
FormulaParser.ADDITION = 9;
FormulaParser.SUBTRACTION = 10;
FormulaParser.SHIFT_LEFT = 11;
FormulaParser.SHIFT_RIGHT = 12;
FormulaParser.LT = 13;
FormulaParser.LTE = 14;
FormulaParser.GT = 15;
FormulaParser.GTE = 16;
FormulaParser.EQUALITY = 17;
FormulaParser.INEQUALITY = 18;
FormulaParser.BITWISE_AND = 19;
FormulaParser.BITWISE_XOR = 20;
FormulaParser.BITWISE_OR = 21;
FormulaParser.LOGICAL_AND = 22;
FormulaParser.LOGICAL_OR = 23;
FormulaParser.TRUE = 24;
FormulaParser.FALSE = 25;
FormulaParser.POINT = 26;
FormulaParser.ID = 27;
FormulaParser.NUMBER_CONST = 28;
FormulaParser.WS = 29;

FormulaParser.RULE_formula = 0;
FormulaParser.RULE_expr = 1;
FormulaParser.RULE_infixExpr = 2;
FormulaParser.RULE_prefixExpr = 3;
FormulaParser.RULE_parenthesesExpr = 4;
FormulaParser.RULE_simpleExpr = 5;
FormulaParser.RULE_func = 6;
FormulaParser.RULE_argumentList = 7;
FormulaParser.RULE_constNumber = 8;
FormulaParser.RULE_pointCode = 9;
FormulaParser.RULE_not = 10;
FormulaParser.RULE_scaling = 11;
FormulaParser.RULE_addition = 12;
FormulaParser.RULE_bitwiseShift = 13;
FormulaParser.RULE_relational = 14;
FormulaParser.RULE_equality = 15;
FormulaParser.RULE_and = 16;
FormulaParser.RULE_exclusiveOr = 17;
FormulaParser.RULE_inclusiveOr = 18;
FormulaParser.RULE_conjunction = 19;
FormulaParser.RULE_disjunction = 20;


function FormulaContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FormulaParser.RULE_formula;
    return this;
}

FormulaContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FormulaContext.prototype.constructor = FormulaContext;

FormulaContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

FormulaContext.prototype.enterRule = function(listener) {
    if(listener instanceof FormulaListener ) {
        listener.enterFormula(this);
	}
};

FormulaContext.prototype.exitRule = function(listener) {
    if(listener instanceof FormulaListener ) {
        listener.exitFormula(this);
	}
};

FormulaContext.prototype.accept = function(visitor) {
    if ( visitor instanceof FormulaVisitor ) {
        return visitor.visitFormula(this);
    } else {
        return visitor.visitChildren(this);
    }
};




FormulaParser.FormulaContext = FormulaContext;

FormulaParser.prototype.formula = function() {

    var localctx = new FormulaContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, FormulaParser.RULE_formula);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 42;
        this.expr();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FormulaParser.RULE_expr;
    return this;
}

ExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExprContext.prototype.constructor = ExprContext;

ExprContext.prototype.infixExpr = function() {
    return this.getTypedRuleContext(InfixExprContext,0);
};

ExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof FormulaListener ) {
        listener.enterExpr(this);
	}
};

ExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof FormulaListener ) {
        listener.exitExpr(this);
	}
};

ExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof FormulaVisitor ) {
        return visitor.visitExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};




FormulaParser.ExprContext = ExprContext;

FormulaParser.prototype.expr = function() {

    var localctx = new ExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, FormulaParser.RULE_expr);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 44;
        this.infixExpr(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function InfixExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FormulaParser.RULE_infixExpr;
    return this;
}

InfixExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InfixExprContext.prototype.constructor = InfixExprContext;

InfixExprContext.prototype.prefixExpr = function() {
    return this.getTypedRuleContext(PrefixExprContext,0);
};

InfixExprContext.prototype.infixExpr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(InfixExprContext);
    } else {
        return this.getTypedRuleContext(InfixExprContext,i);
    }
};

InfixExprContext.prototype.scaling = function() {
    return this.getTypedRuleContext(ScalingContext,0);
};

InfixExprContext.prototype.addition = function() {
    return this.getTypedRuleContext(AdditionContext,0);
};

InfixExprContext.prototype.bitwiseShift = function() {
    return this.getTypedRuleContext(BitwiseShiftContext,0);
};

InfixExprContext.prototype.relational = function() {
    return this.getTypedRuleContext(RelationalContext,0);
};

InfixExprContext.prototype.equality = function() {
    return this.getTypedRuleContext(EqualityContext,0);
};

InfixExprContext.prototype.and = function() {
    return this.getTypedRuleContext(AndContext,0);
};

InfixExprContext.prototype.exclusiveOr = function() {
    return this.getTypedRuleContext(ExclusiveOrContext,0);
};

InfixExprContext.prototype.inclusiveOr = function() {
    return this.getTypedRuleContext(InclusiveOrContext,0);
};

InfixExprContext.prototype.conjunction = function() {
    return this.getTypedRuleContext(ConjunctionContext,0);
};

InfixExprContext.prototype.disjunction = function() {
    return this.getTypedRuleContext(DisjunctionContext,0);
};

InfixExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof FormulaListener ) {
        listener.enterInfixExpr(this);
	}
};

InfixExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof FormulaListener ) {
        listener.exitInfixExpr(this);
	}
};

InfixExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof FormulaVisitor ) {
        return visitor.visitInfixExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};



FormulaParser.prototype.infixExpr = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new InfixExprContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 4;
    this.enterRecursionRule(localctx, 4, FormulaParser.RULE_infixExpr, _p);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 47;
        this.prefixExpr();
        this._ctx.stop = this._input.LT(-1);
        this.state = 91;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                this.state = 89;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
                switch(la_) {
                case 1:
                    localctx = new InfixExprContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, FormulaParser.RULE_infixExpr);
                    this.state = 49;
                    if (!( this.precpred(this._ctx, 10))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 10)");
                    }
                    this.state = 50;
                    this.scaling();
                    this.state = 51;
                    this.infixExpr(11);
                    break;

                case 2:
                    localctx = new InfixExprContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, FormulaParser.RULE_infixExpr);
                    this.state = 53;
                    if (!( this.precpred(this._ctx, 9))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 9)");
                    }
                    this.state = 54;
                    this.addition();
                    this.state = 55;
                    this.infixExpr(10);
                    break;

                case 3:
                    localctx = new InfixExprContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, FormulaParser.RULE_infixExpr);
                    this.state = 57;
                    if (!( this.precpred(this._ctx, 8))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 8)");
                    }
                    this.state = 58;
                    this.bitwiseShift();
                    this.state = 59;
                    this.infixExpr(9);
                    break;

                case 4:
                    localctx = new InfixExprContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, FormulaParser.RULE_infixExpr);
                    this.state = 61;
                    if (!( this.precpred(this._ctx, 7))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
                    }
                    this.state = 62;
                    this.relational();
                    this.state = 63;
                    this.infixExpr(8);
                    break;

                case 5:
                    localctx = new InfixExprContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, FormulaParser.RULE_infixExpr);
                    this.state = 65;
                    if (!( this.precpred(this._ctx, 6))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
                    }
                    this.state = 66;
                    this.equality();
                    this.state = 67;
                    this.infixExpr(7);
                    break;

                case 6:
                    localctx = new InfixExprContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, FormulaParser.RULE_infixExpr);
                    this.state = 69;
                    if (!( this.precpred(this._ctx, 5))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
                    }
                    this.state = 70;
                    this.and();
                    this.state = 71;
                    this.infixExpr(6);
                    break;

                case 7:
                    localctx = new InfixExprContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, FormulaParser.RULE_infixExpr);
                    this.state = 73;
                    if (!( this.precpred(this._ctx, 4))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
                    }
                    this.state = 74;
                    this.exclusiveOr();
                    this.state = 75;
                    this.infixExpr(5);
                    break;

                case 8:
                    localctx = new InfixExprContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, FormulaParser.RULE_infixExpr);
                    this.state = 77;
                    if (!( this.precpred(this._ctx, 3))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
                    }
                    this.state = 78;
                    this.inclusiveOr();
                    this.state = 79;
                    this.infixExpr(4);
                    break;

                case 9:
                    localctx = new InfixExprContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, FormulaParser.RULE_infixExpr);
                    this.state = 81;
                    if (!( this.precpred(this._ctx, 2))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
                    }
                    this.state = 82;
                    this.conjunction();
                    this.state = 83;
                    this.infixExpr(3);
                    break;

                case 10:
                    localctx = new InfixExprContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, FormulaParser.RULE_infixExpr);
                    this.state = 85;
                    if (!( this.precpred(this._ctx, 1))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
                    }
                    this.state = 86;
                    this.disjunction();
                    this.state = 87;
                    this.infixExpr(2);
                    break;

                } 
            }
            this.state = 93;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
        }

    } catch( error) {
        if(error instanceof antlr4.error.RecognitionException) {
	        localctx.exception = error;
	        this._errHandler.reportError(this, error);
	        this._errHandler.recover(this, error);
	    } else {
	    	throw error;
	    }
    } finally {
        this.unrollRecursionContexts(_parentctx)
    }
    return localctx;
};


function PrefixExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FormulaParser.RULE_prefixExpr;
    return this;
}

PrefixExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PrefixExprContext.prototype.constructor = PrefixExprContext;

PrefixExprContext.prototype.parenthesesExpr = function() {
    return this.getTypedRuleContext(ParenthesesExprContext,0);
};

PrefixExprContext.prototype.not = function() {
    return this.getTypedRuleContext(NotContext,0);
};

PrefixExprContext.prototype.addition = function() {
    return this.getTypedRuleContext(AdditionContext,0);
};

PrefixExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof FormulaListener ) {
        listener.enterPrefixExpr(this);
	}
};

PrefixExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof FormulaListener ) {
        listener.exitPrefixExpr(this);
	}
};

PrefixExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof FormulaVisitor ) {
        return visitor.visitPrefixExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};




FormulaParser.PrefixExprContext = PrefixExprContext;

FormulaParser.prototype.prefixExpr = function() {

    var localctx = new PrefixExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, FormulaParser.RULE_prefixExpr);
    try {
        this.state = 101;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case FormulaParser.T__0:
        case FormulaParser.TRUE:
        case FormulaParser.FALSE:
        case FormulaParser.POINT:
        case FormulaParser.ID:
        case FormulaParser.NUMBER_CONST:
            this.enterOuterAlt(localctx, 1);
            this.state = 94;
            this.parenthesesExpr();
            break;
        case FormulaParser.BITWISE_NOT:
        case FormulaParser.LOGICAL_NOT:
            this.enterOuterAlt(localctx, 2);
            this.state = 95;
            this.not();
            this.state = 96;
            this.parenthesesExpr();
            break;
        case FormulaParser.ADDITION:
        case FormulaParser.SUBTRACTION:
            this.enterOuterAlt(localctx, 3);
            this.state = 98;
            this.addition();
            this.state = 99;
            this.parenthesesExpr();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ParenthesesExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FormulaParser.RULE_parenthesesExpr;
    return this;
}

ParenthesesExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ParenthesesExprContext.prototype.constructor = ParenthesesExprContext;

ParenthesesExprContext.prototype.simpleExpr = function() {
    return this.getTypedRuleContext(SimpleExprContext,0);
};

ParenthesesExprContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

ParenthesesExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof FormulaListener ) {
        listener.enterParenthesesExpr(this);
	}
};

ParenthesesExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof FormulaListener ) {
        listener.exitParenthesesExpr(this);
	}
};

ParenthesesExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof FormulaVisitor ) {
        return visitor.visitParenthesesExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};




FormulaParser.ParenthesesExprContext = ParenthesesExprContext;

FormulaParser.prototype.parenthesesExpr = function() {

    var localctx = new ParenthesesExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, FormulaParser.RULE_parenthesesExpr);
    try {
        this.state = 108;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case FormulaParser.TRUE:
        case FormulaParser.FALSE:
        case FormulaParser.POINT:
        case FormulaParser.ID:
        case FormulaParser.NUMBER_CONST:
            this.enterOuterAlt(localctx, 1);
            this.state = 103;
            this.simpleExpr();
            break;
        case FormulaParser.T__0:
            this.enterOuterAlt(localctx, 2);
            this.state = 104;
            this.match(FormulaParser.T__0);
            this.state = 105;
            this.expr();
            this.state = 106;
            this.match(FormulaParser.T__1);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function SimpleExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FormulaParser.RULE_simpleExpr;
    return this;
}

SimpleExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SimpleExprContext.prototype.constructor = SimpleExprContext;

SimpleExprContext.prototype.constNumber = function() {
    return this.getTypedRuleContext(ConstNumberContext,0);
};

SimpleExprContext.prototype.pointCode = function() {
    return this.getTypedRuleContext(PointCodeContext,0);
};

SimpleExprContext.prototype.func = function() {
    return this.getTypedRuleContext(FuncContext,0);
};

SimpleExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof FormulaListener ) {
        listener.enterSimpleExpr(this);
	}
};

SimpleExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof FormulaListener ) {
        listener.exitSimpleExpr(this);
	}
};

SimpleExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof FormulaVisitor ) {
        return visitor.visitSimpleExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};




FormulaParser.SimpleExprContext = SimpleExprContext;

FormulaParser.prototype.simpleExpr = function() {

    var localctx = new SimpleExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, FormulaParser.RULE_simpleExpr);
    try {
        this.state = 113;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case FormulaParser.TRUE:
        case FormulaParser.FALSE:
        case FormulaParser.NUMBER_CONST:
            this.enterOuterAlt(localctx, 1);
            this.state = 110;
            this.constNumber();
            break;
        case FormulaParser.POINT:
            this.enterOuterAlt(localctx, 2);
            this.state = 111;
            this.pointCode();
            break;
        case FormulaParser.ID:
            this.enterOuterAlt(localctx, 3);
            this.state = 112;
            this.func();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function FuncContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FormulaParser.RULE_func;
    return this;
}

FuncContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FuncContext.prototype.constructor = FuncContext;

FuncContext.prototype.ID = function() {
    return this.getToken(FormulaParser.ID, 0);
};

FuncContext.prototype.argumentList = function() {
    return this.getTypedRuleContext(ArgumentListContext,0);
};

FuncContext.prototype.enterRule = function(listener) {
    if(listener instanceof FormulaListener ) {
        listener.enterFunc(this);
	}
};

FuncContext.prototype.exitRule = function(listener) {
    if(listener instanceof FormulaListener ) {
        listener.exitFunc(this);
	}
};

FuncContext.prototype.accept = function(visitor) {
    if ( visitor instanceof FormulaVisitor ) {
        return visitor.visitFunc(this);
    } else {
        return visitor.visitChildren(this);
    }
};




FormulaParser.FuncContext = FuncContext;

FormulaParser.prototype.func = function() {

    var localctx = new FuncContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, FormulaParser.RULE_func);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 115;
        this.match(FormulaParser.ID);
        this.state = 116;
        this.match(FormulaParser.T__0);
        this.state = 118;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << FormulaParser.T__0) | (1 << FormulaParser.BITWISE_NOT) | (1 << FormulaParser.LOGICAL_NOT) | (1 << FormulaParser.ADDITION) | (1 << FormulaParser.SUBTRACTION) | (1 << FormulaParser.TRUE) | (1 << FormulaParser.FALSE) | (1 << FormulaParser.POINT) | (1 << FormulaParser.ID) | (1 << FormulaParser.NUMBER_CONST))) !== 0)) {
            this.state = 117;
            this.argumentList();
        }

        this.state = 120;
        this.match(FormulaParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ArgumentListContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FormulaParser.RULE_argumentList;
    return this;
}

ArgumentListContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ArgumentListContext.prototype.constructor = ArgumentListContext;

ArgumentListContext.prototype.infixExpr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(InfixExprContext);
    } else {
        return this.getTypedRuleContext(InfixExprContext,i);
    }
};

ArgumentListContext.prototype.enterRule = function(listener) {
    if(listener instanceof FormulaListener ) {
        listener.enterArgumentList(this);
	}
};

ArgumentListContext.prototype.exitRule = function(listener) {
    if(listener instanceof FormulaListener ) {
        listener.exitArgumentList(this);
	}
};

ArgumentListContext.prototype.accept = function(visitor) {
    if ( visitor instanceof FormulaVisitor ) {
        return visitor.visitArgumentList(this);
    } else {
        return visitor.visitChildren(this);
    }
};




FormulaParser.ArgumentListContext = ArgumentListContext;

FormulaParser.prototype.argumentList = function() {

    var localctx = new ArgumentListContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, FormulaParser.RULE_argumentList);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 122;
        this.infixExpr(0);
        this.state = 127;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===FormulaParser.T__2) {
            this.state = 123;
            this.match(FormulaParser.T__2);
            this.state = 124;
            this.infixExpr(0);
            this.state = 129;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ConstNumberContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FormulaParser.RULE_constNumber;
    return this;
}

ConstNumberContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ConstNumberContext.prototype.constructor = ConstNumberContext;


 
ConstNumberContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function NumberContext(parser, ctx) {
	ConstNumberContext.call(this, parser);
    ConstNumberContext.prototype.copyFrom.call(this, ctx);
    return this;
}

NumberContext.prototype = Object.create(ConstNumberContext.prototype);
NumberContext.prototype.constructor = NumberContext;

FormulaParser.NumberContext = NumberContext;

NumberContext.prototype.NUMBER_CONST = function() {
    return this.getToken(FormulaParser.NUMBER_CONST, 0);
};
NumberContext.prototype.enterRule = function(listener) {
    if(listener instanceof FormulaListener ) {
        listener.enterNumber(this);
	}
};

NumberContext.prototype.exitRule = function(listener) {
    if(listener instanceof FormulaListener ) {
        listener.exitNumber(this);
	}
};

NumberContext.prototype.accept = function(visitor) {
    if ( visitor instanceof FormulaVisitor ) {
        return visitor.visitNumber(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function BoolContext(parser, ctx) {
	ConstNumberContext.call(this, parser);
    ConstNumberContext.prototype.copyFrom.call(this, ctx);
    return this;
}
